styles/reset.css
html {
    scroll-behavior: smooth;
}

body, html {
    margin: 0;
    padding: 0;
    font-family: 'Arial', serif;
}

a {
    text-decoration: none;
    color: inherit;
}

h1, h2, h3, h4, h5, h6, p {
    margin: 0;
}

